# TanitAD

./: .gitignore  CLAUDE.md  DECISIONS.md  PROJECT_STATE.md  README.md
stack/: README.md  RUNPOD_RUNBOOK.md  pyproject.toml
stack/docs/: phase0_go_criteria.md
stack/experiments/: p0-latency-baseline
stack/scripts/: .gitattributes  build_pai_cache.py  build_refc_anchors.py  build_tanitdataset.py  carla_work_zone.py  ci.ps1  ci_check.py  compare_arms.py  cosmos_pairs.py  cosmos_verify.py  d1_probe_capacity.py  d3_decompose.py  d8_preview.py  dino_precompute.py  driving_diagnostic.py  eval_behavior.py  eval_flagship_v15.py  eval_flagship_v16.py  eval_grounded_rollout_4b.py  eval_metric_rollout.py  evaluate_checkpoint.py  extract_comma2k19.py  finetune_traj.py  flagship_phase0.run.env  flagship_v4_data.py  gate_emitters.py  geom_sanity.py  gpu_lock.sh  idm_head.py  install_pre_start_hook.sh  label_v3_audit.py  lake_byteproof.py  lake_ingest.py  latency_cnce_baseline.py  lead_state_gate.py  lead_state_gate_posthoc.py  pai_build.run.env  pai_calib_probe.py  parity_skipset.sh  physicalai_r0.py  (+49 more)
stack/tanitad/: __init__.py  config.py  keys.py
stack/tests/: test_anchor_tactical.py  test_bakeoff.py  test_build_refc_anchors_v4.py  test_calib.py  test_ci.py  test_ckpt_io.py  test_comma2k19.py  test_comma2k19_contract.py  test_compare_arms.py  test_cosmos_drive.py  test_cosmos_pairs.py  test_d8_preview.py  test_driving_diagnostic.py  test_dynamics_encoder.py  test_epcache.py  test_epcache_key.py  test_eval_behavior.py  test_eval_speed_ckpt.py  test_evaluate_checkpoint.py  test_flagship4b.py  test_flagship_v15.py  test_flagship_v4.py  (+60 more)
(+1317 files in other folders)
